--- a/TreeHack/templates/index.html
+++ b/TreeHack/templates/index.html
@@ -223,7 +223,7 @@
           snippet.getSession().setMode(new PythonMode());
           snippet.getSession().setValue(editor.getSession().getValue());
           
-          $('#share').append('Share your code:<br><textarea>http://5.80.171.76:8000/'+id+'</textarea>');
+          $('#share').append('Share your code:<br><textarea>http://freezing-samurai-8808.herokuapp.com/'+id+'</textarea>');
           $('#showFrom').animate({ 'opacity' : '0' });
           $('#editor, #containsCodeEditor').css({ 'height' : '0px' });
           $('#contentButNotHappy').fadeToggle('slow');
@@ -250,7 +250,7 @@
           snippet.getSession().setMode(new PythonMode());
           snippet.getSession().setValue(editor.getSession().getValue());
           
-          $('#share').append('Share your code:<br><textarea>http://5.80.171.76:8000/'+id+'</textarea>');
+          $('#share').append('Share your code:<br><textarea>http://freezing-samurai-8808.herokuapp.com/'+id+'</textarea>');
         });
         
         $('#showFrom').animate({ 'opacity' : '0' });
@@ -271,7 +271,7 @@
           draw(all.classes, 'classFruit', 200, -Math.floor(Math.random()*50) + 175);
           draw(all.variables, 'varFruit', 200, -Math.floor(Math.random()*50) + 375);
           draw(all.functions, 'methodFruit', 200, -Math.floor(Math.random()*50) + 315);
-          $('#share').append('Share your code:<br><textarea>http://5.80.171.76:8000/'+id+'</textarea>');
+          $('#share').append('Share your code:<br><textarea>http://freezing-samurai-8808.herokuapp.com/'+id+'</textarea>');
         });
       });
 
