--- a/TreeHack/templates/index.html
+++ b/TreeHack/templates/index.html
@@ -303,7 +303,7 @@
   <div id="containsCodeEditor">
   <div id="editor"></div>
   </div>
-  <center><button class="bigBlack" id="smallify">Treeify Me!</button><br><span class="parseError"></span></center>
+  <center><button class="bigBlack" id="smallify">Plant the Seed!</button><br><span class="parseError"></span></center>
   <iframe src="http://www.facebook.com/plugins/like.php?href=<?php echo urlencode(get_permalink($post->ID)); ?>&amp;layout=standard&amp;show_faces=false&amp;width=450&amp;action=like&amp;colorscheme=light" scrolling="no" frameborder="0" allowTransparency="true" style="border:none; overflow:hidden; width:450px; height:60px;"></iframe>
   </div>
 
@@ -323,7 +323,7 @@
   <div id="containsSnippet">
   <div id="snippet"></div>
   </div><br>
-  <button class="bigBlack" id="updateThisCrap">Treeify Me!</button>
+  <button class="bigBlack" id="updateThisCrap">Plant the Seed!</button>
   <br><span class="parseError"></span>
   <div id="share">
   </div>
