--- a/TreeHack/templates/index.html
+++ b/TreeHack/templates/index.html
@@ -20,7 +20,7 @@
       for (var name in types) {
         count += 1;
       }
-	  _x = _x - (count / 2 * 100);
+	  _x = _x - (count * 150);
       for (var name in types) {
         var alttext = types[name]['doc'];
 		_x += 100;
@@ -68,7 +68,7 @@
 		var i = 0;
 	  for (var name in current['classes']) {
 			
-          var newX = (i - count / 4) * 100 + x;
+          var newX = (i - count / 2) * 600 / count + x + 150;
 			i += 1;
           var newY = Math.floor(Math.random()*50) + y - 100;
           var tit = new String();
@@ -101,7 +101,7 @@
       if (current.hasOwnProperty('functions')) {
 		var i = 0;
         for (var name in current['functions']) {
-          var newX = (i - count / 4) * 100 + x;
+          var newX = (i - count / 2) * 600 / count + x + 150;
 			i += 1;
           var newY = Math.floor(Math.random()*50) + y - 100;
           var tit = new String();
@@ -133,7 +133,7 @@
       if (current.hasOwnProperty('variables')) {
 		var i = 0;
         for (var name in current['variables']) {
-          var newX = (i - count / 4) * 100 + x;
+          var newX = (i - count / 2) * 600 / count + x + 150;
 			i += 1;
           var newY = Math.floor(Math.random()*50) - 100 + y;
           var tit = new String();
@@ -204,12 +204,15 @@
 
 
 
-  /*$('#smallify').click(function() {
-
+  $('#smallify').click(function() {
+  try {
     $.ajax({
         type: 'POST',
+
         url: '/transferCode/',
+
         data: {'code': editor.getSession().getValue()},
+
         success : function(dic) {
           all = dic['parsed'];
           id = dic['ID'];
@@ -217,69 +220,34 @@
           draw(all.classes, 'classFruit', 270, -Math.floor(Math.random()*50) + 175);
           draw(all.variables, 'varFruit', 270, -Math.floor(Math.random()*50) + 375);
           draw(all.functions, 'methodFruit', 270, -Math.floor(Math.random()*50) + 315);
-          
           snippet = ace.edit("snippet");
           var PythonMode = require("ace/mode/python").Mode;
           snippet.getSession().setMode(new PythonMode());
           snippet.getSession().setValue(editor.getSession().getValue());
-          
           $('#share').append('Share your code:<br><textarea>http://5.80.171.76:8000/'+id+'</textarea>');
           $('#showFrom').animate({ 'opacity' : '0' });
           $('#editor, #containsCodeEditor').css({ 'height' : '0px' });
           $('#contentButNotHappy').fadeToggle('slow');
           $('#contentAndNotSad').fadeToggle('slow');
-          },
+          }),
+
         error: function() {
-          
-  $(".parseError").html( "PARSE ERROR YO" );
+          $(".parseError").html( "PARSE ERROR YO" );
           }
     });
-  });*/
-
-
-  loadNextThings = function() {
-        draw(all.classes, 'classFruit', 200, -Math.floor(Math.random()*50) + 175);
-        draw(all.variables, 'varFruit', 200, -Math.floor(Math.random()*50) + 375);
-        draw(all.functions, 'methodFruit', 200, -Math.floor(Math.random()*50) + 315);
-        
-        $('#showFrom').animate({ 'opacity' : '0' });
-        $('#editor, #containsCodeEditor').css({ 'height' : '0px' });
-      
-        $('#contentButNotHappy').fadeToggle('slow');
-        $('#contentAndNotSad').fadeToggle('slow');
-          
-        snippet = ace.edit("snippet");
-        var PythonMode = require("ace/mode/python").Mode;
-        snippet.getSession().setMode(new PythonMode());
-        snippet.getSession().setValue(editor.getSession().getValue());
-        
-        $('#share').append('Share your code:<br><textarea>http://5.80.171.76:8000/'+id+'</textarea>');
-      
-  };
-  
-    $('#smallify').click(function() {
-        $.post('/transferCode/', {'code': editor.getSession().getValue()}, function(dic) {
-          all = dic['parsed'];
-          id = dic['ID'];
-          console.log( all );
-          if ( all instanceof Object ) {
-           loadNextThings();
-          } else {
-           $(".parseError").html( all );
-          }
-        });
-      });
 
       $('#updateThisCrap').click(function() {
         $.post('/transferCode/', {'code': snippet.getSession().getValue()}, function(dic) {
           all = dic['parsed'];
           id = dic['ID'];
+          
           $('#growsOnTrees').empty();
           $('#share').empty();
-          draw(all.classes, 'classFruit', 200, -Math.floor(Math.random()*50) + 175);
-          draw(all.variables, 'varFruit', 200, -Math.floor(Math.random()*50) + 375);
-          draw(all.functions, 'methodFruit', 200, -Math.floor(Math.random()*50) + 315);
-          $('#share').append('Share your code:<br><textarea>http://5.80.171.76:8000/'+id+'</textarea>');
+          
+          draw(all.classes, 'classFruit');
+          draw(all.variables, 'varFruit');
+          draw(all.functions, 'methodFruit');
+          $('#share').append('Share your code:<br><textarea>http://freezing-samurai-8808.herokuapp.com/'+id+'</textarea>');
         });
       });
 
@@ -304,15 +272,15 @@
 </a>
     Pyception will grow your beautiful code into a beautiful tree.<br>
     <span id="pushThisButton" class="bigBlack">Try it now</span>
-    
+    <span id="parseError"></span>
   </div>
   <div id="showForm">
   Please type your code below.
   <div id="containsCodeEditor">
   <div id="editor"></div>
   </div>
-  <center><button class="bigBlack" id="smallify">Treeify Me!</button><br><span class="parseError"></span></center>
-  <iframe src="http://www.facebook.com/plugins/like.php?href=<?php echo urlencode(get_permalink($post->ID)); ?>&amp;layout=standard&amp;show_faces=false&amp;width=450&amp;action=like&amp;colorscheme=light" scrolling="no" frameborder="0" allowTransparency="true" style="border:none; overflow:hidden; width:450px; height:60px;"></iframe>
+  <center><button class="bigBlack" id="smallify">Treeify Me!</button></center>
+  
   </div>
 
   
@@ -332,7 +300,7 @@
   <div id="snippet"></div>
   </div><br>
   <button class="bigBlack" id="updateThisCrap">Treeify Me!</button>
-  <br><span class="parseError"></span>
+  
   <div id="share">
   </div>
   </div>
