--- a/TreeHack/templates/index.html
+++ b/TreeHack/templates/index.html
@@ -253,7 +253,7 @@
         snippet.getSession().setMode(new PythonMode());
         snippet.getSession().setValue(editor.getSession().getValue());
         
-        $('#share').append('Share your code:<br><textarea>'window.location.href+id+'</textarea>');
+        $('#share').append('Share your code:<br><textarea>'+window.location.href+id+'</textarea>');
       
   };
   
